2006-03-24  Callum McKenzie  <callum@spooky-possum.org>

	* gnotravex.c: Use the new high scores code.

2006-03-22  Callum McKenzie  <callum@spooky-possum.org>

	* help/C/gnotravex.xml: Remove the doctable link, it was broken
	*and* being used inappropriately. Replaced with the 
	ghelp:gnome-feedback link. Bug #335263.

2006-01-17  Callum McKenzie  <callum@spooky-possum.org>

	* gnotravex.c: Patch from Scott Bronson to ensure user-edited
	accelerators are saved (bug #327280).

2005-08-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotravex.xml:  Remove the mention of the
	no-longer-existing bug reporting guidelines. See bug #312723.

2005-07-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/figures/*:
	* help/C/gnotravex.xml: Bumped the version number and updated the
	screenshots.

2005-07-11  Richard Hoelscher  <rah@rahga.com>

	* gnotravex.c: Make ui_description readonly.

2005-06-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnotravex.xml: More fixes from Alan Horkan.

2005-05-09  Alan Horkan <horkana tcd ie>

	* help/C/gnotravex.xml: Removed Known Bugs sections where not
	needed.

2005-06-05  Richard Hoelscher  <rah@rahga.com>

	* gnotravex.c: Add support for GtkUIManager and Action-based menus.
	(main): Move important parts of create_space() into main, updated
	to support gtk+ widgets for statusbar and menubar. 
	(create_menu): Support GtkAction
	(button_motion_space): Bug fix, don't show original piece while 
	highlighted and paused.
	(create_statusbar): Use GtkStatusBar instead.

2005-06-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnotravex.c: Debranding.

2005-05-11  Richard Hoelscher  <rah@rahga.com>

	* gnotravex.c (gui_draw_pixmap): Remove the pango absolute font size
	workaround, and support localization of the numbers in the puzzle.
	* (setup_mover): Fix a minor bug from previous patch. (#303836)

2005-03-31  Callum McKenzie  <callum@physics.otago.ac.nz>
